# AlgoritmosP3-Dicotomia

./: CMakeLists.txt  dicotomia.c  dicotomia.h  main.c  readWriteData.c  readWriteData.h
dicotomia/: configDico.c  dicotomia.c  dicotomia.h
dicotomia/d_hash_tables/: d_hash.c  d_hash.h
dicotomia/d_hash_tables/persist_to_txt/: readWriteData_h.c  readWriteData_h.h
dicotomia/d_hash_tables/test_d_hash/: test_h.c
dicotomia/d_sort/: d_sort.c  d_sort.h
dicotomia/d_sort/persist_to_txt/: readWriteData_s.c  readWriteData_s.h
dicotomia/d_sort/test_d_heap/: test_heap.c
dicotomia/d_sort/test_d_vector/: test_v.c
dicotomia/d_vector/: d_vector.c  d_vector.h
dicotomia/d_vector/persist_to_txt/: readWriteData_v.c  readWriteData_v.h
dicotomia/d_vector/test_d_vector/: test_v.c
tmp/: tmpCachedData_h.txt  tmpCachedData_m.txt  tmpCachedData_s.txt  tmpCachedData_v.txt
